--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vue-router": "^4.4.5",
+    "naive-ui": "^2.43.1",
     "vue": "^3.5.22"
   },
   "devDependencies": {
