--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue-router": "^4.4.5",
     "naive-ui": "^2.43.1",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.7"
+    "@vue/server-renderer": "^3.5.22",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^27.0.1",
+    "playwright": "^1.56.1",
+    "vite": "^7.1.7",
+    "vitest": "^4.0.4"
   }
 }
