--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
     "naive-ui": "^2.43.1",
     "vue": "^3.5.22",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
