--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:full": "concurrently \"php -S localhost:8000 -t ../BackEnd\" \"vite\"",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -20,6 +21,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/server-renderer": "^3.5.22",
     "@vue/test-utils": "^2.4.6",
+    "concurrently": "^8.2.2",
     "jsdom": "^27.0.1",
     "less": "^4.4.2",
     "playwright": "^1.56.1",
