--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.13.0",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "jspdf": "^3.0.3",
     "naive-ui": "^2.43.1",
     "vue": "^3.5.22",
     "vue-i18n": "^9.14.5",
