--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "jspdf": "^3.0.3",
+    "leaflet": "^1.9.4",
     "naive-ui": "^2.43.1",
     "vue": "^3.5.22",
     "vue-i18n": "^9.14.5",
