--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ RAPIDAPI_HOST=booking-com.p.rapidapi.com
 GEMINI_ENDPOINT=https://your-vertex-ai-or-gemini-endpoint
 GEMINI_API_KEY=AIzaSyBS1ou94XjqyNVy_yaBkTc2WdMotfYRgF4
 PORT=4000
+MAILER_HOST=smtp.gmail.com
+MAILER_PORT=587
+MAILER_USERNAME=yapwh-wm20@student.tarc.edu.my
+MAILER_PASSWORD=rkbanhpnzaklblce
+MAILER_ENCRYPTION=tls
+MAILER_FROM_ADDRESS=yapwh-wm20@student.tarc.edu.my
+MAILER_FROM_NAME="Malaysia Sustainable Travel"
